layout shift fix

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -13,6 +13,7 @@ footer .footer > div {
 footer .footer p {
   margin: 0;
   min-height: 25px;
+  font-size: 16px;
 }
 
 @media (width >= 900px) {
