--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -59,6 +59,7 @@ header nav p {
   margin: 0;
   line-height: 1;
   min-height: 34px;
+  font-size: 16px;
 }
 
 /* hamburger */
