--- a/blocks/product-details/product-details.css
+++ b/blocks/product-details/product-details.css
@@ -80,6 +80,7 @@
 
 .product-details p {
   min-height: 30px;
+  font-size: 16px;
 }
 
 
